# docs/swagger/swagger.json
@@ -1529,6 +1529,12 @@
         "keys.VirtualKey": {
             "type": "object",
             "properties": {
+                "alert_threshold": {
+                    "type": "integer"
+                },
+                "alert_webhook": {
+                    "type": "string"
+                },
                 "expires_at": {
                     "type": "string"
                 },
